prevent the image gallery's images from overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 * {
   box-sizing: border-box;
-  border: 0;
-  margin: 0;
-  padding: 0;
 }
 
 body {
+  border: 0;
+  margin: 0;
+  padding: 0;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
@@ -15,4 +15,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.image-gallery,
+.image-gallery:fullscreen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Prevent overflow of the image gallery's images */
+.image-gallery-content {
+  max-width: 85%;
 }
